  thanks to Herman van Rink - helmo
+ [lang] Lithuanian update, thanks to Rytis Slatkevicius - rytis_s 
+ [auth] New setting AllowNoPassword (supercedes AllowNoPasswordRoot) that
  applies to all accounts (even the anonymous user)
- patch #2652972 [relation] Missing code with hashing for relationship
  editing, thanks to knittl - knittl

3.1.4.0 (not yet released)
+ patch #1808339 [doc] Apache SSLOptions and StdEnvVars FAQ,
  thanks to JT Justman - jtjustman
- bug #2491017 [operations] ANSI mode not supported (db rename and table move) 
- bug #2609346 [operations] Fix copying views.

3.1.3.0 (2009-02-28)
+ [lang] Turkish update, thanks to Burak Yavuz
- patch #2496403 [display] Multi-row change with "]",
  thanks to Virsacer - virsacer
- bug #2027720 [parser] Missing space after BINARY used as cast 
- patch #2520747 [core] E_DEPRECATED compatibility for PHP 5.3,
  thanks to Giovanni Giacobbi - themnemonic
- bug [display] Message "Bookmark created" is not displaying
+ [display] Show AUTO_INCREMENT instead of A_I when in vertical mode
- patch #2538358 [display] Conditions for relational display field, 
  thanks to Virsacer - virsacer
+ [lang] Mongolian update, thanks to Bayarsaikhan Enkhtaivan - bayaraa
- patch #2553372 [display] DB comment tooltips not shown on navi,
  thanks to Erdem - ahard
- patch #2561433 [structure] Display true number of rows in a view
  if it contains less than MaxExactCountViews,
  thanks to Virsacer - virsacer
+ [lang] Polish update, thanks to Fixer - fixeron
- bug #2568722 [designer] Compound key not shown
- patch #2550323 [XHTML] in server_databases.php, thanks to Virsacer - virsacer
- patch #2358861 [navi] Row count tooltip wrong for information_schema, 
  thanks to Herman van Rink - helmo
- bug #2565948 [core] Changing the connection collation changed the client
  charset.
+ [lang] Romanian update, thanks to Sergiu Bivol - sbivol
- patch #1760205 [data] Insert as new row: BLOB is lost, 
  thanks to Herman van Rink - helmo