@@ -607,6 +607,12 @@ since this link provides funding for phpMyAdmin.
     You can set this parameter to <tt>TRUE</tt> to stop this message 
     from appearing.</dd>
 
+    <dt id="cfg_McryptDisableWarning">$cfg['McryptDisableWarning'] boolean</dt>
+    <dd>Disable the default warning that is displayed if mcrypt is missing for
+    cookie authentication.
+    You can set this parameter to <tt>TRUE</tt> to stop this message 
+    from appearing.</dd>
+
     <dt id="cfg_AllowThirdPartyFraming">$cfg['AllowThirdPartyFraming'] boolean</dt>
     <dd>Setting this to <tt>true</tt> allows a page located on a different
     domain to call phpMyAdmin inside a frame, and is a potential security
